Maybe the rows are too small and it's causing issues?

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -6,7 +6,7 @@
     grid-template-areas: 
       "heading heading heading"
       "menu index_body ."; 
-    grid-template-rows: 30px auto;
+    grid-template-rows: auto;
     justify-content: center;
     margin: 0.5em;
   }
